<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:title="@string/str_menu_home" />


    <item
        android:id="@+id/nav_directory"
        android:icon="@drawable/icon_directory"
        android:title="@string/str_menu_directory" />
    <item
        android:id="@+id/nav_business"
        android:icon="@drawable/icon_business"
        android:title="@string/str_menu_business" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/str_menu_profile" />

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/icon_events"
        android:title="@string/str_menu_events" />
    <item
        android:id="@+id/nav_advertisements"
        android:icon="@drawable/icon_advertisement"
        android:title="@string/str_menu_advertisements" />

    <item
        android:id="@+id/nav_videos"
        android:icon="@drawable/icon_videos"
        android:title="@string/str_menu_videos" />


    <item
        android:id="@+id/nav_contactus"
        android:icon="@drawable/icon_contact_us"
        android:title="@string/str_menu_contactus" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/icon_logout"
        android:title="@string/str_menu_logout" />


</menu>
